feat: Add alert component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -2637,6 +2637,32 @@
      </section>
 
      <section class="flex flex_column flex_gap_lg">
+      <h2 class="ui_heading h2 bold bullet primary" id="toc_feedbacks">Feedbacks</h2>
+
+      <section class="flex flex_column flex_gap_xl">
+       <h3 class="ui_heading h3" id="toc_alert">Alert</h3>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Basic</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert error">Error alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert warning">Warning alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert info">Info alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert success">Success alert</div>
+         </div>
+        </div>
+       </div>
+      </section>
+     </section>
+
+     <section class="flex flex_column flex_gap_lg">
       <h2 class="ui_heading h2 bold bullet primary" id="toc_inputs">Inputs</h2>
 
       <section class="flex flex_column flex_gap_xl">
