feat: Add dialog component

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -2659,6 +2659,90 @@
          </div>
         </div>
        </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Outlined</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert outlined error">Error alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert outlined warning">Warning alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert outlined info">Info alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert outlined success">Success alert</div>
+         </div>
+        </div>
+       </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Filled</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert filled error">Error alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert filled warning">Warning alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert filled info">Info alert</div>
+         </div>
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_alert filled success">Success alert</div>
+         </div>
+        </div>
+       </div>
+      </section>
+
+      <section class="flex flex_column flex_gap_xl">
+       <h3 class="ui_heading h3" id="toc_dialog">Dialog</h3>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Basic</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_button primary button_open_dialog">Open dialog</div>
+          <div class="ui_dialog">
+           <dialog class="dialog">Dialog</dialog>
+          </div>
+         </div>
+        </div>
+       </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Animations</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_button primary button_open_dialog">Open fadein dialog</div>
+          <div class="ui_dialog">
+           <dialog class="dialog">Dialog</dialog>
+          </div>
+          <div class="ui_button primary button_open_dialog">Open slidein dialog</div>
+          <div class="ui_dialog slidein">
+           <dialog class="dialog">Dialog</dialog>
+          </div>
+          <div class="ui_button primary button_open_dialog">Open flash dialog</div>
+          <div class="ui_dialog flash">
+           <dialog class="dialog">Dialog</dialog>
+          </div>
+         </div>
+        </div>
+       </div>
+
+       <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
+        <h4 class="ui_heading h4">Scroll</h4>
+        <div class="flex flex_column flex_align_stretch flex_gap_md">
+         <div class="flex flex_row flex_align_center flex_gap_lg">
+          <div class="ui_button primary button_open_dialog">Open dialog</div>
+          <div class="ui_dialog slidein">
+           <dialog class="dialog">Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.Long Content.</dialog>
+          </div>
+         </div>
+        </div>
+       </div>
       </section>
      </section>
 
