feat: Add comments to UI catalog

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -11,6 +11,10 @@
  <body>
   <div id="theme_wrapper">
    <div class="flex flex_row">
+
+    <!--------------------------------------------------------------------------
+    -- Sidebar
+    --------------------------------------------------------------------------->
     <aside class="ui_sidebar">
      <div class="ui_sidebar_inner">
       <div class="flex flex_column flex_gap_xl margin_right_md">
@@ -29,12 +33,21 @@
      </div>
     </aside>
  
+    <!--------------------------------------------------------------------------
+    -- Main
+    --------------------------------------------------------------------------->
     <main class="flex flex_column flex_gap_2xl padding_xl overflow_hidden_x">
      <h1 class="ui_heading h1 bold divider center primary">UI catalog</h1>
 
+     <!-------------------------------------------------------------------------
+     -- Common
+     -------------------------------------------------------------------------->
      <section class="flex flex_column flex_gap_lg">
       <h2 class="ui_heading h2 bold bullet primary" id="toc_common">Common</h2>
 
+      <!------------------------------------------------------------------------
+      -- Colors
+      ------------------------------------------------------------------------->
       <section>
        <div  class="flex flex_column flex_gap_md">
         <h3 class="ui_heading h3" id="toc_colors">Colors</h3>
@@ -42,6 +55,9 @@
        </div>
       </section>
  
+      <!------------------------------------------------------------------------
+      -- Theme Colors
+      ------------------------------------------------------------------------->
       <section>
        <div  class="flex flex_column flex_gap_md">
         <h3 class="ui_heading h3" id="toc_theme_colors">Theme Colors</h3>
@@ -50,9 +66,15 @@
       </section>
      </section>
 
+     <!-------------------------------------------------------------------------
+     -- Datas
+     -------------------------------------------------------------------------->
      <section class="flex flex_column flex_gap_lg">
       <h2 class="ui_heading h2 bold bullet primary" id="toc_datas">Datas</h2>
 
+      <!------------------------------------------------------------------------
+      -- Heading
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_heading">Heading</h3>
 
@@ -272,6 +294,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Icon
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_icon">Icon</h3>
 
@@ -344,6 +369,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- List
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_list">List</h3>
 
@@ -502,6 +530,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Table
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_table">Table</h3>
 
@@ -2636,9 +2667,15 @@
       </section>
      </section>
 
+     <!-------------------------------------------------------------------------
+     -- Feedbacks
+     -------------------------------------------------------------------------->
      <section class="flex flex_column flex_gap_lg">
       <h2 class="ui_heading h2 bold bullet primary" id="toc_feedbacks">Feedbacks</h2>
 
+      <!------------------------------------------------------------------------
+      -- Alert
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_alert">Alert</h3>
 
@@ -2697,6 +2734,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Dialog
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_dialog">Dialog</h3>
 
@@ -2746,9 +2786,15 @@
       </section>
      </section>
 
+     <!-------------------------------------------------------------------------
+     -- Inputs
+     -------------------------------------------------------------------------->
      <section class="flex flex_column flex_gap_lg">
       <h2 class="ui_heading h2 bold bullet primary" id="toc_inputs">Inputs</h2>
 
+      <!------------------------------------------------------------------------
+      -- Button
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_buttons">Button</h3>
 
@@ -2846,6 +2892,9 @@
        </div>
       </section>
  
+      <!------------------------------------------------------------------------
+      -- Button Group
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_button_group">Button Group</h3>
 
@@ -3066,6 +3115,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Checkbox
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_checkbox">Checkbox</h3>
 
@@ -3107,8 +3159,11 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Floating Button
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
-       <h3 class="ui_heading h3" id="toc_floating_button">Floating button</h3>
+       <h3 class="ui_heading h3" id="toc_floating_button">Floating Button</h3>
 
        <div class="ui_box surface radius padding_lg overflow_auto_x flex flex_column flex_gap_md">
         <h4 class="ui_heading h4">Basic</h4>
@@ -3232,6 +3287,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Radio
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_radio">Radio</h3>
 
@@ -3273,6 +3331,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Range Slider
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_range_slider">Range Slider</h3>
 
@@ -3299,6 +3360,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Select
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_select">Select</h3>
 
@@ -3497,6 +3561,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Switch
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_switch">Switch</h3>
 
@@ -3538,6 +3605,9 @@
        </div>
       </section>
 
+      <!------------------------------------------------------------------------
+      -- Text Field
+      ------------------------------------------------------------------------->
       <section class="flex flex_column flex_gap_xl">
        <h3 class="ui_heading h3" id="toc_text_field">Text Field</h3>
 
