fix: Tweak the UI

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -3972,7 +3972,7 @@
 
        <div class="uic_container example_box">
         <h4 class="ui_heading h4">Full Width</h4>
-        <div class="example_flex_column">
+        <div class="example_flex_column flex_align_stretch">
          <div class="example_flex_row">
           <input type="text" class="ui_text_field full" placeholder="Text Filed">
          </div>
