feat: Add function to retain previous settings

--- a/dev/proto/ui_catalog/index.html
+++ b/dev/proto/ui_catalog/index.html
@@ -31,10 +31,10 @@
        </div>
 
        <div id="device_mode" class="ui_button_group primary">
-        <button data-screen_size="375"><span class="ui_icon icon_mobile white pointer_event_none"></span></button>
-        <button data-screen_size="768"><span class="ui_icon icon_tablet white pointer_event_none"></span></button>
-        <button data-screen_size="1024"><span class="ui_icon icon_laptop white pointer_event_none"></span></button>
-        <button class="active" data-screen_size="0"><span class="ui_icon icon_desktop white pointer_event_none"></span></button>
+        <button data-device_mode="mobile" data-screen_size="375"><span class="ui_icon icon_mobile white pointer_event_none"></span></button>
+        <button data-device_mode="tablet" data-screen_size="768"><span class="ui_icon icon_tablet white pointer_event_none"></span></button>
+        <button data-device_mode="laptop" data-screen_size="1024"><span class="ui_icon icon_laptop white pointer_event_none"></span></button>
+        <button data-device_mode="desktop" data-screen_size="0"><span class="ui_icon icon_desktop white pointer_event_none"></span></button>
        </div>
 
        <div id="toc"></div>
